--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
   <!-- Recharts (UMD build that provides window.Recharts) -->
-  <script src="https://unpkg.com/recharts/umd/Recharts.min.js"></script>
+<script src="https://unpkg.com/recharts@2.12.7/umd/Recharts.min.js"></script>
 
   <!-- Babel (only for JSX-in-browser) -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
